<resources>
    <string name="app_name">MovieTheater Monthly Pass</string>
    <string name="txtTitle">Movie Theater Pass</string>
    <string name="imgSplash">Image of Popcorn</string>
    <string name="txtEmail">Your Email</string>
    <string name="txtPass">Your Password</string>
    <string name="btnEnter">Let me enter</string>
    <string name="txtInvite">Join the club. Signup NOW!</string>
    <string name="btnInvitation">I Want to Join</string>
    <string name="txtRegister">Create a new account</string>
    <string name="txtName">Full Name</string>
    <string name="txtBirthday">Birthday Date</string>
    <string name="txtPassRepeat">Repeat Password</string>
    <string name="txtPrivacy">I accept the \"Terms and Conditions\"</string>
    <string name="txtSettings">Settings</string>
    <string name="txtProfile">Profile</string>
    <string name="txtBilling">Billing Info</string>
    <string name="txtReservations">My Reservations</string>
    <string name="txtLogout">Logout</string>
    <string name="txtWelcomeMessage">It is movie time today, Join Us!</string>
    <string name="txtCategory">Browse by Category</string>
    <string name="txtReleases">New Releases</string>
    <string name="txtSearchHint">Find your Movie</string>
    <string name="txtMovieTitle">The Lord of The Rings: The...</string>
    <string name="txtAction">Action</string>
    <string name="txtFamily">Family</string>
    <string name="txtAllMovies">On Display</string>
    <string name="txtSettingsEmail">Send promotional items to my email</string>
    <string name="txtBack">Back</string>
    <string name="txtPlanBasic">Basic</string>
    <string name="txtPlanPremium">Premium</string>
    <string name="txtPlanOneMovie">One movie per day</string>
    <string name="txtPlan2DOnly">2D Movies only</string>
    <string name="txtPlanAll">2D, 3D, IMAX Available</string>
    <string name="txtPlanNoPremieres">* Premieres and early releases not included</string>
    <string name="txtPlanTitle">Monthly Plans</string>
    <string name="txtPlanSubtitle">Choose the best plan for you!</string>
    <string name="txtSave">Save</string>
    <string name="txtCreditCardTitle">Credit Card Info</string>
    <string name="txtCreditCardSubtitle">Update your billing information</string>
    <string name="txtCreditCardNumberHint">Card Number</string>
    <string name="txtCreditCardExpirationDate">Expiration Date</string>
    <string name="txtCreditCardCVVNumber">CVV Number</string>
    <string name="imgCVVNumberHint">Image showing where is the CVV number in Visa, Master and American Express cards</string>
    <string name="txtCreditCardHolderName">Name</string>
    <string name="txtProfileTitle">Profile Information</string>
    <string name="txtProfileSubtitle">Update your information</string>
    <string name="txtProfileChangePassword">Change your password</string>
    <string name="txtProfileCurrentPass">Current Password</string>
    <string name="txtNewPassword">New Password</string>
    <string name="txtMovieDetailsTitle">Movie Details</string>
    <string name="txtMovieDetailsSession">Sessions</string>
    <string name="txtMovieDetailsChooseDate">Pick a date</string>
    <string name="txtMovieDetailsRating">Global\'s Ratings</string>
    <string name="txtMovieDetailsTheaterHint">Choose a location</string>
    <string name="txtSaveReserve">Reserve Me a Ticket</string>
    <string name="txtReservationTitle">Reservations</string>
    <string name="txtReservationSubtitle">Ticket</string>
    <string name="txtReservationAll">All Reservations</string>
    <string name="txtReservationCancel">SET AS CONSUMED</string>
    <string name="txtReservationCancelHint">Simulate how a movie cancellation looks like</string>
    <string name="noData">No Data</string>
    <string name="txtReservationNoShow">No-Show</string>
    <string name="txtReservationNoShowHint">Simulate how a no-show situation would look like</string>
</resources>
