<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_settings"
        android:title="@string/txtSettings"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_profile"
        android:title="@string/txtProfile"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_billing"
        android:title="@string/txtBilling"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_reservations"
        android:title="@string/txtReservations"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_logout"
        android:title="@string/txtLogout"
        app:showAsAction="never" />
</menu>