<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditCardActivity">

    <include android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCreditCardTitle"
        android:text="@string/txtCreditCardTitle"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:textColor="@color/movie_title"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCreditCardSubtitle"
        android:text="@string/txtCreditCardSubtitle"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/txtCreditCardTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_editor_absoluteY="115dp"
        app:layout_editor_absoluteX="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="6dp"
        />

    <ImageView
        android:id="@+id/imgCreditCard"
        android:layout_width="75dp"
        android:layout_height="55dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/blank"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintLeft_toRightOf="@+id/txtCreditCardNumber"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCreditCardSubtitle"
         />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtCreditCardNumber"
        android:hint="@string/txtCreditCardNumberHint"
        android:textSize="24sp"
        android:inputType="textNoSuggestions|number"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@id/txtCreditCardSubtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"


        />

    <EditText
        android:id="@+id/txtCreditCardHolderName"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/txtCreditCardHolderName"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCreditCard" />

    <DatePicker
        android:id="@+id/dateCreditCardExpiration"
        android:layout_width="330dp"
        android:layout_height="145dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="16dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:maxDate="12/31/2030"
        android:minDate="03/31/2018"
        android:spinnersShown="true"
        android:theme="@android:style/Theme.Holo.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreditCardExpirationDate" />

    <TextView
        android:id="@+id/txtCreditCardExpirationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="222dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="222dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:text="@string/txtCreditCardExpirationDate"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreditCardHolderName"
         />

    <EditText
        android:id="@+id/txtCreditCardCVVNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="127dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="127dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/txtCreditCardCVVNumber"
        android:inputType="textNoSuggestions|number"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateCreditCardExpiration" />

    <Button
        android:id="@+id/btnSaveCreditCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:enabled="false"
        android:text="@string/txtSave"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imgCVVNumber"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginEnd="29dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="29dp"
        android:layout_marginStart="18dp"
        android:contentDescription="@string/imgCVVNumberHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtCreditCardCVVNumber"
        app:layout_constraintTop_toBottomOf="@+id/dateCreditCardExpiration"
        app:srcCompat="@drawable/cvvnumber"
        android:visibility="gone"
        />

</android.support.constraint.ConstraintLayout>